<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home_navigation"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/about_navigation"
        android:title="@string/title_about"
        android:icon="@drawable/ic_about"
        />
    <item android:id="@+id/praatice_navigation"
        android:title="@string/title_practice"
        android:icon="@drawable/ic_services"
        />
    <item android:id="@+id/news_navigation"
        android:title="@string/title_news"
        android:icon="@drawable/ic_news"
        />
    <item android:id="@+id/contact_navigation"
        android:title="@string/title_contact_menu"
        android:icon="@drawable/ic_contact"
        />
</menu>