<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/title_about"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                >
                <ImageView
                    android:id="@+id/imageInstagram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/overs"
                    />
                <TextView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/firm_overview"
                    android:fontFamily="@font/google_sans_bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="14dp"
                    />

            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/firm_overview_1"
                        android:fontFamily="@font/google_sans_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:justificationMode="inter_word"
                        />
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/mission"
                        android:fontFamily="@font/google_sans_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/purple_500"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/mission_1"
                        android:fontFamily="@font/google_sans_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:justificationMode="inter_word"
                        android:textSize="13dp"
                        />
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/vission"
                        android:fontFamily="@font/google_sans_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/purple_500"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/vission_1"
                        android:fontFamily="@font/google_sans_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:justificationMode="inter_word"
                        android:textSize="13dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/overs"
                        />
                    <TextView

                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/honours"
                        android:fontFamily="@font/google_sans_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/purple_500"
                        android:textSize="14dp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/chamber"
                        android:fontFamily="@font/google_sans_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/purple_500"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/chamber_1"
                        android:fontFamily="@font/google_sans_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:justificationMode="inter_word"
                        android:textSize="13dp"
                        />
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/chamber4"
                        android:fontFamily="@font/google_sans_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/purple_500"
                        android:textSize="13dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/chamber5"
                        android:fontFamily="@font/google_sans_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:justificationMode="inter_word"
                        android:textSize="13dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu"
        />

</LinearLayout>