<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/whiterounded"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tapConnect"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/google_sans_bold"
                android:textColor="@color/purple_500"
                android:padding="5dp"
                android:text="@string/title_contact"

                android:textSize="13dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                >
                <LinearLayout
                    android:id="@+id/calling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_calling"
                        app:tint="@color/purple_500"
                        tools:ignore="VectorDrawableCompat" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:textColor="@color/purple_500"
                        android:text="@string/cont_call"
                        android:layout_marginTop="10dp"
                        android:textSize="13dp"
                        android:layout_weight="1"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="4"
                        >
                    </View>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    >
                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_email"
                        app:tint="@color/purple_500"
                        tools:ignore="VectorDrawableCompat" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:textColor="@color/purple_500"
                        android:text="@string/cont_email"
                        android:layout_marginTop="10dp"
                        android:textSize="13dp"
                        android:layout_weight="1"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="4"
                        >
                    </View>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/locating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_location"
                        app:tint="@color/purple_500"
                        tools:ignore="VectorDrawableCompat" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:textColor="@color/purple_500"
                        android:text="@string/cont_location"
                        android:layout_marginTop="10dp"
                        android:textSize="13dp"
                        android:layout_weight="1"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="4"
                        >
                    </View>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>




</LinearLayout>