<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/mmim"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/ic_curvebacks_01"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/lits"
                android:background="@drawable/circle"
                android:layout_margin="5dp"
                android:padding="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/service_two"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/lg_content"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:justificationMode="inter_word"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="Areas of operations"
                    android:fontFamily="@font/google_sans_bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="- Commercial and Civil litigation"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="- Employment and Labour"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="- Mediation and Arbitration"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="- Recoveries"
                    android:fontFamily="@font/google_sans_regular"
                    android:gravity="center_vertical"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    />


                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/google_sans_bold"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/title_contact"
                    android:textSize="13dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>